# cvImagePipeline

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CMakeLists.txt  sample.vcxproj  sample.vcxproj.filters  test.vcxproj  test.vcxproj.filters
include/: .ImageProcessor.h.swp  AbsDiff.h  AverageMat.h  AverageOnline.h  BackgroundSubtractor.h  ColorConverter.h  Convert.h  DepthTo32F.h  Dilate.h  EqualizeHist.h  Erode.h  FeatureMatcher.h  FeatureTracker.h  FitInGrid.h  Flipper.h  FlowTracker.h  GaussianBlur.h  ImageDataPtr.h  ImagePoint.h  ImageProcessor.h  ImageWindow.h  ImgProcSet.h  ImgProcThread.h  LabeledObject.h  Labeler.h  MaskCopy.h  OpticalFlowFarneback.h  OpticalFlowPyrLK.h  RegionOfInterest.h  Resizer.h  RunningAvg.h  SubMat.h  SuperImpose.h  Threshold.h  TrackingObject.h  VideoCapture.h  cvImagePipeline.h  cvUtils.h
sample/: ReadMe.txt  capture.cpp  sample.vcxproj  sample.xml  stdafx.h
source/: AbsDiff.cpp  BackgroundSubtractor.cpp  ColorConverter.cpp  Dilate.cpp  EqualizeHist.cpp  Erode.cpp  FeatureMatcher.cpp  FeatureTracker.cpp  FitInGrid.cpp  FlowTracker.cpp  ImageProcessor.cpp  ImageWindow.cpp  ImgProcSet.cpp  ImgProcThread.cpp  LabeledObject.cpp  Labeler.cpp  MaskCopy.cpp  OpticalFlowFarneback.cpp  OpticalFlowPyrLK.cpp  RegionOfInterest.cpp  RunningAvg.cpp  SubMat.cpp  SuperImpose.cpp  Threshold.cpp  TrackingObject.cpp  VideoCapture.cpp  createVideoAverageImage.cpp  cvImagePipeline.rc  cvUtils.cpp  resource.h
src/: CHANGE_LOG.md  ERS.md  cvImageBlock.sln  cvImagePipeline.sln
src/capture/: capture.cpp  capture.vcxproj  stdafx.cpp
src/cvImageBlock/: EqualizeHist.cpp  FeatureMatcher.cpp  ImageDataPtr.cpp  ImageProcessor.cpp  Labeler.cpp  OpticalFlowFarneback.cpp  TrackingObject.cpp  cvImageBlock.vcxproj  cvImageBlock.vcxproj.filters
src/cvImagePipeline/: AbsDiff.cpp  AverageMat.cpp  AverageOnline.cpp  BackgroundSubtractor.cpp  ColorConverter.cpp  Convert.cpp  DepthTo32F.cpp  Dilate.cpp  Erode.cpp  FeatureTracker.cpp  FitInGrid.cpp  Flipper.cpp  FlowTracker.cpp  GaussianBlur.cpp  ImagePoint.cpp  ImageProcessor.cpp  ImgProcSet.cpp  ImgProcThread.cpp  LabeledObject.cpp  MaskCopy.cpp  OpticalFlowFarneback.cpp  OpticalFlowPyrLK.cpp  Resizer.cpp  RunningAvg.cpp  SubMat.cpp  Threshold.cpp  VideoCapture.cpp  createVideoAverageImage.cpp  cvImagePipeline-2010.vcxproj  cvImagePipeline.vcxproj  cvImagePipeline.vcxproj.filters  cvUtils.cpp  resource.h
src/test/: test.cpp  test.vcxproj
test/: certain.xml  stdafx.h  test.cpp  test.h  test.vcxproj  test.vcxproj.filters  test_Convert.cpp
